add swipe and search

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RickAndMortyPagingMvvm</string>
+    <string name="searchcharacter">searchCharacter</string>
 </resources>
